# tauri-global-sys

./: Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/sys/: Cargo.toml
crates/sys/src/: app.rs  cli.rs  clipboard.rs  dialog.rs  error.rs  event.rs  fs.rs  global_shortcut.rs  http.rs  lib.rs  notification.rs  os.rs  path.rs  process.rs  tauri.rs
crates/sys/src/app/: raw.rs
crates/sys/src/cli/: raw.rs
crates/sys/src/clipboard/: raw.rs
crates/sys/src/dialog/: raw.rs
crates/sys/src/event/: raw.rs  tauri_events.rs
crates/sys/src/fs/: raw.rs
crates/sys/src/global_shortcut/: raw.rs
crates/sys/src/http/: raw.rs  send_sync_client.rs
crates/sys/src/http/raw/: classes.rs  functions.rs
crates/sys/src/http/raw/classes/: body.rs  client.rs  response.rs
crates/sys/src/notification/: raw.rs
crates/sys/src/os/: raw.rs
crates/sys/src/path/: raw.rs
crates/sys/src/process/: raw.rs
crates/sys/src/tauri/: raw.rs
examples/leptos-app/: Cargo.toml  package.json
examples/leptos-app/frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html
examples/leptos-app/frontend/src/: app.module.scss  app.rs  main.rs
examples/leptos-app/frontend/src/app/: components.rs  hooks.rs  utils.rs
examples/leptos-app/frontend/src/app/components/: app_module.rs  cli_matches_test.module.scss  cli_matches_test.rs  clip_board.rs  dialog.module.scss  dialog.rs  fetch.rs  format_debug.rs  fs.rs  global_shortcuts.rs  greet.rs  notification.rs  os.rs  test_event.module.css  test_event.rs
examples/leptos-app/frontend/src/app/components/dialog/: ask.rs  confirm.rs  message.rs  open.rs  save.rs
examples/leptos-app/frontend/src/app/components/fs/: base_directory.rs  copy_file.rs  create_dir.rs  exists.rs  fs_dir_option.rs  fs_option.rs  read_dir.module.scss  read_dir.rs  read_file.rs  remove_smth.rs  rename_file.rs  write_file.module.scss  write_file.rs
examples/leptos-app/frontend/src/app/hooks/: use_aborts.rs
examples/leptos-app/frontend/src/app/utils/: deser_form_data.rs  extract_from_data.rs
examples/leptos-app/src-tauri/: Cargo.toml  tauri.conf.json
