[package]
name = "tauri-global-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
thiserror.workspace = true

[workspace.package]
version = "1.0.0"
authors = ["tonymushah <tonymushahDev06@yahoo.com>"]
edition = "2024"

[workspace]
members = ["./examples/*", "./examples/*/src-tauri"]

[workspace.dependencies]
leptos = { version = "0.7" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1" }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tauri = { version = "1" }
serde_json = "1"
tauri-build = { version = "1" }
stylance = "0.5"
thiserror = "2"