[workspace.package]
version = "1.0.0"
authors = ["tonymushah <tonymushahDev06@yahoo.com>"]
edition = "2021"

[workspace]
members = ["./examples/*/frontend/", "./examples/*/src-tauri", "./crates/*"]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.7" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1" }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tauri = { version = "1" }
serde_json = "1"
tauri-build = { version = "1" }
stylance = "0.5"
thiserror = "2"
tauri-global-sys = { path = "./crates/sys" }
log = "0.4"
futures = "0.3"
console_log = "1"
web-sys = "0.3"
stylance-cli = "0.5"
anyhow = "1"
semver = "1"
serde_repr = "0.1"
enum_all_variants = "0.2.0"