[package]
name = "tauri-global-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
futures.workspace = true
log = { optional = true, workspace = true }
semver = { workspace = true, features = ["serde"] }
serde_repr = { workspace = true }
enum_all_variants = { workspace = true }
enum-repr = { workspace = true }

[dev-dependencies]
serde_json.workspace = true

[features]
log = ["dep:log"]
