[package]
name = "leptos-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
stylance.workspace = true
tauri-global-sys = { workspace = true, features = ["log"] }
console_log = { workspace = true, features = ["color"] }
serde_json.workspace = true
log.workspace = true
futures.workspace = true
web-sys.workspace = true