[package]
name = "leptos-app"
version = "0.1.0"
description = "A Tauri App"
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["shell-open"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
